[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainLevel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]

[sub_resource type="Environment" id=1]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0.607843, 0.737255, 0.0588235, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0, 0, 0, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Background" ]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="FoodBtn" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 251.797, 223.82 )
type = 0

[node name="PlayBtn" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 333.924, 223.82 )
type = 1

[node name="DisciplineBtn" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 414.247, 223.82 )
type = 2

[node name="TileMap" parent="." index="3" instance=ExtResource( 3 )]

[node name="Player" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 506.151, 221.058 )

[node name="Camera2D" type="Camera2D" parent="Player" index="4"]

position = Vector2( -4.45325, 4.19684 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = -10000000
limit_right = 640
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="SpawnGrub_1" type="Position2D" parent="." index="5"]

position = Vector2( 105.678, 390.892 )
__meta__ = {
"_edit_group_": true
}

[node name="SpawnTimer" type="Timer" parent="SpawnGrub_1" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="BackgroundLayer" type="WorldEnvironment" parent="." index="6"]

environment = SubResource( 1 )

[connection signal="button_pressed" from="Player" to="." method="_on_Player_button_pressed"]

[connection signal="timeout" from="SpawnGrub_1/SpawnTimer" to="." method="_on_Timer_timeout"]


